Fri Jul 15 00:48:39 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Fix superfluous shell quoting.

Fri Jul 15 00:28:40 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am,preautoreconf,Makefile.am: Generate
	  the list of source files to feed to doxygen by inspecting all the
	  Makefile.am files prior to running autoreconf rather than by using
	  "find" when the user runs ./configure.  This speeds up configure,
	  avoids generating docs for random .cc and .h files which aren't
	  part of xapian-core, and avoids problems with picking up FIND.EXE
	  on MS Windows.

Thu Jul 14 12:49:36 BST 2005  Olly Betts <olly@survex.com>

	* common/,matcher/multimatch.cc,matcher/networkmatch.cc,
	  matcher/networkmatch.h,net/socketclient.cc,net/socketserver.cc,
	  tests/api_db.cc: Implement sorting on a value with the remote
	  backend.

Wed Jul 13 01:25:17 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/database.h,include/xapian/dbfactory.h,
	  net/socketclient.cc: Regularise horizontal whitespace.

Tue Jul 05 03:03:57 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Oops, failed to check in header
	  changes for last change.

Mon Jul 04 15:50:55 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,queryparser/queryparser.cc:
	  Add flag FLAG_BOOLEAN_ANY_CASE which tells the QueryParser that
	  boolean operators such as "AND", "OR", and "NEAR" should be
	  recognised even if they aren't fully capitalised (so "and",
	  "And", "aNd", etc will work too).  Add flag FLAG_WILDCARD which
	  tells the QueryParser to allow right truncation e.g. "xap*".
	* tests/queryparsertest.cc: Add tests for FLAG_WILDCARD.

Sun Jul 03 15:24:12 BST 2005  Olly Betts <olly@survex.com>

	* backends/database.cc: Fixed to auto-detect database type when
	  opening an existing Flint database as a WritableDatabase.

Sat Jul 02 18:49:22 BST 2005  Olly Betts <olly@survex.com>
